--- a/app/assets/stylesheets/sul-variables.scss
+++ b/app/assets/stylesheets/sul-variables.scss
@@ -10,6 +10,7 @@ $cool-grey: #4d4f53;
 $gray: #3f3c30;
 $light-sandstone: #f9f6ef;
 $mint: #009b76;
+$dark-mint: #00664e;
 $poppy: #e98300;
 $stone: #544948;
 $white: #fff;
